# tuiker

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
tuiker/: app.py  main.py  style.tcss  tuiker.py
tuiker/modules/: commands.py  compose.py  containers.py  logs.py
tuiker/screens/: container_details_screen.py
tuiker/static/: styles.tcss
tuiker/tabs/: logs_tab.py  resources_tab.py  shell_tab.py
tuiker/utils/: docker_utils.py
